--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The backend to Alternative Fiction",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:reset": "babel-node scripts/reset-database.js && knex migrate:latest",
+    "start": "supervisor scripts/watch.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,25 @@
   "bugs": {
     "url": "https://github.com/alternative-fiction/services/issues"
   },
-  "homepage": "https://github.com/alternative-fiction/services#readme"
+  "homepage": "https://github.com/alternative-fiction/services#readme",
+  "dependencies": {
+    "babel-cli": "6.4.5",
+    "babel-register": "6.4.3",
+    "good": "6.4.0",
+    "good-console": "5.2.0",
+    "good-file": "5.1.1",
+    "hapi": "12.1.0",
+    "hapi-bookshelf-models": "1.6.0",
+    "hapi-node-postgres": "3.0.1",
+    "pg": "4.4.3",
+    "pgtools": "0.0.2"
+  },
+  "devDependencies": {
+    "babel": "6.3.26",
+    "babel-eslint": "5.0.0-beta6",
+    "babel-polyfill": "6.3.14",
+    "babel-preset-es2015": "6.3.13",
+    "babel-runtime": "6.3.19",
+    "eslint": "1.10.3"
+  }
 }
