--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "db:reset": "babel-node scripts/reset-database.js && knex migrate:latest",
-    "start": "supervisor scripts/watch.js"
+    "start": "supervisor -q scripts/watch.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-runtime": "6.3.19",
-    "eslint": "1.10.3"
+    "eslint": "1.10.3",
+    "supervisor": "0.9.1"
   }
 }
