--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "db:reset": "babel-node scripts/reset-database.js && knex migrate:latest",
-    "start": "node scripts/watch.js"
+    "lint:fix": "eslint --fix .",
+    "start": "babel-node scripts/watch.js",
+    "test": "eslint . && lab -T node_modules/lab-babel -l -t 100 -S tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -37,7 +39,9 @@
     "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-runtime": "6.3.19",
+    "code": "2.1.0",
     "eslint": "1.10.3",
-    "supervisor": "0.9.1"
+    "lab": "8.2.0",
+    "lab-babel": "1.1.1"
   }
 }
