--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "babel-cli": "6.4.5",
     "babel-register": "6.4.3",
+    "bookshelf": "0.9.1",
     "colors": "1.1.2",
     "good": "6.4.0",
     "good-console": "5.2.0",
@@ -30,6 +31,7 @@
     "hapi-bookshelf-serializer": "2.1.0",
     "hapi-boom-decorators": "1.1.2",
     "hapi-node-postgres": "3.0.1",
+    "knex": "0.9.0",
     "pg": "4.4.3",
     "pgtools": "0.0.2"
   },
