--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "db:migrate": "knex migrate:latest",
     "db:reset": "babel-node scripts/reset-database.js && knex migrate:latest",
     "lint:fix": "eslint --fix .",
-    "start": "babel-node scripts/watch.js",
+    "postinstall": "babel --source-maps inline --out-dir build/ ./app",
+    "start": "babel-node app/web.js",
     "test": "NODE_ENV=test eslint . && lab -T node_modules/lab-babel -l -t 100 -S tests/**/*.js"
   },
   "repository": {
@@ -23,6 +24,7 @@
   "dependencies": {
     "babel-cli": "6.4.5",
     "babel-register": "6.4.3",
+    "babel-polyfill": "6.3.14",
     "bookshelf": "0.9.1",
     "colors": "1.1.2",
     "good": "6.4.0",
@@ -39,7 +41,6 @@
   "devDependencies": {
     "babel": "6.3.26",
     "babel-eslint": "5.0.0-beta6",
-    "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "babel-runtime": "6.3.19",
