--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint:fix": "eslint --fix .",
     "postinstall": "babel --source-maps inline --out-dir build/ ./app",
     "start": "babel-node app/web.js",
+    "start:production": "pm2 start build/web.js",
+    "stop:production": "pm2 stop all",
     "test": "NODE_ENV=test eslint . && lab -T node_modules/lab-babel -l -t 100 -S tests/**/*.js"
   },
   "repository": {
@@ -23,10 +25,10 @@
   "homepage": "https://github.com/alternative-fiction/services#readme",
   "dependencies": {
     "babel-cli": "6.4.5",
+    "babel-polyfill": "6.3.14",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "babel-runtime": "6.3.19",
-    "babel-polyfill": "6.3.14",
     "bookshelf": "0.9.1",
     "colors": "1.1.2",
     "good": "6.4.0",
@@ -38,7 +40,8 @@
     "hapi-node-postgres": "3.0.1",
     "knex": "0.9.0",
     "pg": "4.4.3",
-    "pgtools": "0.0.2"
+    "pgtools": "0.0.2",
+    "pm2": "1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "5.0.0-beta6",
