--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hapi-bookshelf-serializer": "2.1.0",
     "hapi-boom-decorators": "1.1.2",
     "hapi-node-postgres": "3.0.1",
+    "inert": "3.2.0",
     "knex": "0.9.0",
     "pg": "4.4.3",
     "pgtools": "0.0.2",
