--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "babel-runtime": "6.3.19",
     "bookshelf": "0.9.1",
     "bookshelf-secure-password": "1.0.1",
+    "chance": "0.8.0",
     "colors": "1.1.2",
     "good": "6.4.0",
     "good-console": "5.2.0",
     "good-file": "5.1.1",
     "hapi": "12.1.0",
+    "hapi-auth-jwt2": "5.3.2",
     "hapi-bookshelf-serializer": "2.1.0",
     "hapi-boom-decorators": "1.1.2",
     "hapi-node-postgres": "3.0.1",
     "inert": "3.2.0",
+    "jsonwebtoken": "5.5.4",
     "knex": "0.9.0",
     "pg": "4.4.3",
     "pgtools": "0.0.2",
