--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "babel-node app/web.js",
     "start:production": "node build/pm2.js",
     "stop:production": "pm2 stop all",
-    "test": "NODE_ENV=test eslint . && lab -T node_modules/lab-babel -l -t 100 -S tests/**/*.js"
+    "test": "NODE_ENV=test eslint . && lab -v -T node_modules/lab-babel -l -t 100 -S tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,9 @@
     "knex": "0.9.0",
     "pg": "4.4.3",
     "pgtools": "0.0.2",
-    "pm2": "1.0.0"
+    "pm2": "1.0.0",
+    "prettyjson": "1.1.3",
+    "redis-connection": "4.0.1"
   },
   "devDependencies": {
     "babel-eslint": "5.0.0-beta6",
