--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-runtime": "6.3.19",
     "bookshelf": "0.9.1",
     "bookshelf-secure-password": "1.0.1",
+    "boom": "3.1.2",
     "chance": "0.8.0",
+    "checkit": "0.6.0",
     "colors": "1.1.2",
     "good": "6.4.0",
     "good-console": "5.2.0",
