--- a/.eslintrc
+++ b/.eslintrc
@@ -96,6 +96,7 @@
     "no-undef-init": 2,
     "no-undefined": 2,
     "no-unexpected-multiline": 2,
+    "no-unreachable": 1,
     "no-unused-vars": 1,
     "no-use-before-define": 2,
     "no-useless-call": 1,
