--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "6.3.13",
     "babel-preset-stage-0": "6.3.13",
     "babel-runtime": "6.3.19",
+    "bluebird": "3.2.2",
     "bookshelf": "0.9.1",
     "bookshelf-secure-password": "1.0.1",
     "boom": "3.1.2",
