--- a/package.json
+++ b/package.json
@@ -40,18 +40,15 @@
     "good-console": "5.2.0",
     "good-file": "5.1.1",
     "hapi": "13.0.0",
-    "hapi-auth-jwt2": "5.4.1",
     "hapi-bookshelf-serializer": "2.1.0",
     "hapi-boom-decorators": "1.1.2",
     "hapi-node-postgres": "3.0.1",
     "inert": "3.2.0",
-    "jsonwebtoken": "5.5.4",
     "knex": "0.9.0",
+    "lodash": "4.5.1",
     "pg": "4.4.3",
     "pgtools": "0.0.2",
-    "pm2": "1.0.0",
-    "prettyjson": "1.1.3",
-    "redis-connection": "4.0.1"
+    "pm2": "1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "5.0.0-beta6",
