--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   },
   "homepage": "https://github.com/alternative-fiction/services#readme",
   "dependencies": {
-    "babel-cli": "6.4.5",
-    "babel-polyfill": "6.3.14",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-stage-0": "6.3.13",
-    "babel-runtime": "6.3.19",
+    "babel-cli": "6.6.4",
+    "babel-polyfill": "6.6.1",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-stage-0": "6.5.0",
     "bluebird": "3.2.2",
     "bookshelf": "0.9.1",
     "bookshelf-secure-password": "1.0.1",
@@ -51,10 +50,9 @@
     "pm2": "1.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "5.0.0-beta6",
-    "babel-register": "6.4.3",
+    "babel-eslint": "5.0.0",
     "code": "2.1.0",
-    "eslint": "1.10.3",
+    "eslint": "2.2.0",
     "lab": "8.2.0",
     "lab-babel": "1.1.1"
   }
